--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: # filename of a logo image that has been placed into your images directory
 owner:
   name: Cindy Levine
   avatar: bio-photo.jpg
-  bio: "A brief description of yourself."
+  bio: "Research Librarian for Humanities and Social Sciences, NCSU Libraries"
   email: crlevine@ncsu.edu
   # Do not include the @ symbol in your Twitter username
   twitter: cindylevine14
